Add login router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
 <h2>Here are some links to help you start: </h2>
 <ul>
   <li>
+    <h2><a routerLink="login">Login</a></h2>
+  </li>
+  <li>
     <h2><a routerLink="home">Home</a></h2>
   </li>
   <li>
